--- a/src/styles.css
+++ b/src/styles.css
@@ -147,3 +147,14 @@ body {
 	color: #0384fc;
 	font-weight: 700;
 }
+
+.footer {
+	text-align: center;
+	margin-top: 20rem;
+	position: relative;
+	bottom: 0;
+}
+
+#footer-text {
+	font-size: 1.5rem;
+}
